ALF Implementation and add methods to initialize admin with different types of DP connector.
Signed-off-by: Cong Chen <cong.chen@ing.com>

--- a/open-metadata-implementation/governance-servers/data-platform-services/data-platform-services-server/pom.xml
+++ b/open-metadata-implementation/governance-servers/data-platform-services/data-platform-services-server/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>data-platform-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.odpi.egeria</groupId>
+            <artifactId>audit-log-framework</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
